Done index page; similar as when calling the api at apiv1/anuncios but for the browser

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,10 +2,22 @@
 <html>
   <head>
     <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="stylesheet" href="/stylesheets/index.css" />
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <main class="anuncios-grid-container">
+      <% anuncios.forEach(anuncio => { %>
+      <ul class="anuncio-container">
+        <li class="foto">
+          <img src="..<%= anuncio.foto %>" alt="<%= anuncio.foto %>" />
+        </li>
+        <li class="name"><%= anuncio.nombre %></li>
+        <li class="venta">Se vende: <%= anuncio.venta %></li>
+        <li class="precio"><%= anuncio.precio %> €</li>
+        <li class="tags">Tags: <%= anuncio.tags %></li>
+      </ul>
+      <% }); %>
+    </main>
   </body>
 </html>
