Create anuncio with post

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
       <% anuncios.forEach(anuncio => { %>
       <ul class="anuncio-container">
         <li class="foto">
-          <img src="..<%= anuncio.foto %>" alt="<%= anuncio.foto %>" />
+          <img src="..<%= anuncio.foto %>" alt="imagen-no-disponible" />
         </li>
         <li class="name"><%= anuncio.nombre %></li>
         <li class="venta">Se vende: <%= anuncio.venta %></li>
